# proxy

./: .gitignore  CMakeLists.txt  README.md  config.json.example  core.c  fmt.h  main.c  socks5.c  socks5.h
.github/workflows/: test-windows.yml
include/: config.h  fmt.h  socks5.h
src/: config.c  main.c
src/platform/: unix_socks5.c  win32_socks5.c
